--- a/definisi.html
+++ b/definisi.html
@@ -85,7 +85,7 @@
                 <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
               </li>
               <li>
-                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300">Kontak</a>
+                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300" style="margin-left: -25px;">Kontak</a>
               </li>
             </ul>
           </div>
