--- a/eksplor.html
+++ b/eksplor.html
@@ -84,7 +84,7 @@
                 <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
               </li>
               <li>
-                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300">Kontak</a>
+                <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300 style="margin-left: -25px;">Kontak</a>
               </li>
             </ul>
           </div>
@@ -182,19 +182,19 @@
       </a>
     </div>
 
-    <div class="flex justify-center space-x-4 my-20">
+    <div class="flex flex-wrap justify-center space-x-4 my-20">
       <!-- Card 4 -->
       <a href="/hati.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/liver.png" alt="liver-hati" />
           <div class="p-4">
-            <p class="mb-2">Liver / Hati</p>
+            <p class="mb-2">Hati</p>
           </div>
         </div>
       </a>
 
       <!-- Card 5 -->
-      <a href="/eksplor/ginjal.html">
+      <a href="/ginjal.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal-hati" />
           <div class="p-4">
