--- a/ginjal.html
+++ b/ginjal.html
@@ -136,16 +136,65 @@
 
 
   <div class="text-center mt-12">
-    <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
-    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
-    <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    <p class="text-3xl font-bold text-accent-secondary mb-4">Anatomi Ginjal</p>
+    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Ginjal Bentuk 3D</p>
   </div>
 
 
-  <div class="flex justify-center lg:col-span-1">
-    <model-viewer src="assets/blend/hero/otak.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
+  <div class="flex justify-center lg:col-span-1 mt-20">
+    <model-viewer src="assets/blend/hero/ginjal.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
   </div>
 
+
+
+  <div class="container mx-auto p-6">
+    <div class="bg-gradient-to-r from-[#18abbc]  via-purple-500  to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
+      <h2 class="text-3xl font-bold mb-4">Penjelasan Tentang <span class="text-accent-secondary">Ginjal</span></h2>
+      <p class="mb-4">
+        Ginjal adalah organ vital dalam tubuh manusia yang berfungsi sebagai penyaring darah, membuang limbah dan kelebihan cairan melalui urine. Ginjal juga berperan dalam menjaga keseimbangan elektrolit dan tekanan darah, serta memproduksi hormon yang penting untuk fungsi tubuh lainnya.
+      </p>
+      <p>
+        Setiap orang memiliki dua ginjal yang terletak di kedua sisi tulang belakang, tepat di bawah tulang rusuk. Ginjal memainkan peran penting dalam menjaga kesehatan tubuh secara keseluruhan, termasuk mengatur kadar asam-basa, serta mengontrol produksi sel darah merah.
+      </p>
+    </div>
+  
+    <!-- Bagian-Bagian Ginjal -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Bagian - Bagian <span class="text-[#18abbc]">Ginjal</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Korteks Ginjal</strong>: Lapisan luar ginjal yang berisi nefron, unit fungsional yang menyaring darah untuk menghasilkan urine.</div>
+        <div><strong>Medula Ginjal</strong>: Bagian dalam ginjal yang terdiri dari piramida ginjal, yang membantu dalam proses pembentukan dan pengaliran urine.</div>
+        <div><strong>Piramida Ginjal</strong>: Struktur berbentuk kerucut yang berada di medula, berfungsi untuk mengumpulkan dan menyalurkan urine menuju pelvis ginjal.</div>
+        <div><strong>Pelvis Ginjal</strong>: Ruang berbentuk corong di bagian dalam ginjal yang mengumpulkan urine dari piramida ginjal sebelum dialirkan ke kandung kemih melalui ureter.</div>
+        <div><strong>Ureter</strong>: Saluran yang membawa urine dari ginjal ke kandung kemih untuk disimpan sebelum dikeluarkan dari tubuh.</div>
+      </div>
+    </div>
+  
+    <!-- Penyakit-Penyakit Umum Pada Ginjal -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Penyakit - Penyakit Umum Pada <span class="text-[#18abbc]">Ginjal</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Gagal Ginjal</strong>: Kondisi di mana ginjal tidak dapat menyaring limbah dari darah dengan efektif, sehingga memerlukan dialisis atau transplantasi ginjal.</div>
+        <div><strong>Batu Ginjal</strong>: Kristal keras yang terbentuk di ginjal dan dapat menyebabkan nyeri hebat saat melewati saluran kemih.</div>
+        <div><strong>Infeksi Saluran Kemih (ISK)</strong>: Infeksi yang terjadi di bagian manapun dari sistem kemih, termasuk ginjal, yang dapat menyebabkan gejala seperti nyeri dan frekuensi buang air kecil meningkat.</div>
+        <div><strong>Glomerulonefritis</strong>: Peradangan pada glomeruli, unit penyaring kecil di ginjal, yang dapat menyebabkan kerusakan ginjal dan proteinuria.</div>
+        <div><strong>Polikistik Ginjal</strong>: Penyakit genetik yang menyebabkan terbentuknya kista-kista di ginjal, yang dapat mengganggu fungsi ginjal dari waktu ke waktu.</div>
+      </div>
+    </div>
+  
+    <!-- Cara Mengatasi Penyakit Ginjal -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Cara Mengatasi Penyakit <span class="text-[#18abbc]">Ginjal</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Perubahan Gaya Hidup</strong>: Mengadopsi pola makan rendah garam, mengontrol tekanan darah, dan menjaga kadar gula darah dapat membantu melindungi ginjal.</div>
+        <div><strong>Pengobatan Medis</strong>: Obat-obatan seperti diuretik atau antibiotik dapat digunakan untuk mengobati masalah ginjal, tergantung pada kondisi spesifiknya.</div>
+        <div><strong>Dialisis</strong>: Prosedur medis yang menggantikan fungsi ginjal dengan menyaring darah secara eksternal saat ginjal tidak lagi dapat melakukannya.</div>
+        <div><strong>Transplantasi Ginjal</strong>: Penggantian ginjal yang rusak dengan ginjal yang sehat dari donor, sering kali menjadi pilihan untuk pasien dengan gagal ginjal tahap akhir.</div>
+        <div><strong>Pemeriksaan Rutin</strong>: Melakukan tes darah dan urine secara berkala untuk memantau kesehatan ginjal dan mencegah perkembangan penyakit ginjal.</div>
+      </div>
+    </div>
+  </div>
+  
 
 
 
