--- a/hati.html
+++ b/hati.html
@@ -136,18 +136,64 @@
 
 
   <div class="text-center mt-12">
-    <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
-    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
-    <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    <p class="text-3xl font-bold text-accent-secondary mb-4">Anatomi Hati</p>
+    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Hati Bentuk 3D</p>
   </div>
 
 
-  <div class="flex justify-center lg:col-span-1">
-    <model-viewer src="assets/blend/hero/HATILIVER.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 600px"></model-viewer>
+  <div class="flex justify-center lg:col-span-1 mt-20">
+    <model-viewer src="assets/blend/hero/hati.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
   </div>
 
 
-
+  <div class="container mx-auto p-6">
+    <div class="bg-gradient-to-r from-[#18abbc]  via-purple-500  to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
+      <h2 class="text-3xl text-white font-bold mb-4">Penjelasan Tentang Hati</h2>
+      <p class="mb-4">
+        Hati adalah organ vital dalam tubuh manusia yang berfungsi untuk memproses nutrisi dari makanan, menyaring racun dari darah, dan memproduksi empedu yang penting untuk pencernaan. Hati juga berperan dalam mengatur metabolisme dan menyimpan energi dalam bentuk glikogen.
+      </p>
+      <p>
+        Hati terletak di bagian kanan atas perut, di bawah diafragma. Organ ini memiliki kemampuan unik untuk meregenerasi dirinya sendiri, yang membuatnya sangat penting untuk kesehatan tubuh secara keseluruhan.
+      </p>
+    </div>
+  
+    <!-- Bagian-Bagian Hati -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Bagian - Bagian <span class="text-[#18abbc]">Hati</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Lobus Kanan</strong>: Bagian terbesar dari hati, bertanggung jawab atas sebagian besar fungsi metabolisme hati.</div>
+        <div><strong>Lobus Kiri</strong>: Bagian yang lebih kecil dari hati, tetapi tetap berperan penting dalam fungsi hati secara keseluruhan.</div>
+        <div><strong>Empedu</strong>: Cairan yang diproduksi oleh hati untuk membantu pencernaan lemak dalam usus kecil.</div>
+        <div><strong>Sinusoid</strong>: Kapiler khusus di hati yang memungkinkan darah mengalir perlahan dan memudahkan proses penyaringan dan pemrosesan.</div>
+        <div><strong>Hepatosit</strong>: Sel-sel utama dalam hati yang bertanggung jawab untuk berbagai fungsi, termasuk detoksifikasi, sintesis protein, dan produksi empedu.</div>
+      </div>
+    </div>
+  
+    <!-- Penyakit-Penyakit Umum Pada Hati -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Penyakit - Penyakit Umum Pada <span class="text-[#18abbc]">Hati</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Hepatitis</strong>: Peradangan hati yang dapat disebabkan oleh infeksi virus, konsumsi alkohol berlebihan, atau reaksi obat. Hepatitis dapat menyebabkan kerusakan hati jika tidak diobati.</div>
+        <div><strong>Sirosis</strong>: Kondisi kronis di mana jaringan hati menjadi rusak dan digantikan oleh jaringan parut, yang menghambat fungsi normal hati.</div>
+        <div><strong>Penyakit Hati Berlemak</strong>: Kondisi di mana lemak menumpuk di dalam hati, sering kali terkait dengan obesitas atau konsumsi alkohol, yang dapat menyebabkan peradangan dan kerusakan hati.</div>
+        <div><strong>Kanker Hati</strong>: Jenis kanker yang dimulai di sel-sel hati. Penyakit ini sering kali terkait dengan sirosis atau infeksi hepatitis kronis.</div>
+        <div><strong>Kolestasis</strong>: Kondisi di mana aliran empedu dari hati terhambat, yang dapat menyebabkan penumpukan bilirubin dan menimbulkan penyakit kuning.</div>
+      </div>
+    </div>
+  
+    <!-- Cara Mengatasi Penyakit Hati -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Cara Mengatasi Penyakit <span class="text-[#18abbc]">Hati</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Perubahan Gaya Hidup</strong>: Mengadopsi pola makan rendah garam, mengontrol tekanan darah, dan menjaga kadar gula darah dapat membantu melindungi hati.</div>
+        <div><strong>Pengobatan Medis</strong>: Obat-obatan tertentu dapat membantu mengobati penyakit hati, tergantung pada jenis dan tingkat keparahannya.</div>
+        <div><strong>Transplantasi Hati</strong>: Penggantian hati yang rusak dengan hati yang sehat dari donor, sering kali menjadi pilihan untuk pasien dengan kerusakan hati yang parah.</div>
+        <div><strong>Pemeriksaan Rutin</strong>: Melakukan tes darah secara berkala untuk memantau fungsi hati dan mendeteksi masalah sejak dini.</div>
+        <div><strong>Vaksinasi</strong>: Vaksin untuk hepatitis A dan B dapat membantu mencegah infeksi yang dapat menyebabkan kerusakan hati.</div>
+      </div>
+    </div>
+  </div>
+  
 
  <!-- Footer -->
  <footer class="bg-white">
