--- a/otak.html
+++ b/otak.html
@@ -136,17 +136,67 @@
 
 
   <div class="text-center mt-12">
-    <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
-    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
-    <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    <p class="text-3xl font-bold text-accent-secondary mb-4">Anatomi Otak</p>
+    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Otak Bentuk 3D</p>
   </div>
 
 
-  <div class="flex justify-center lg:col-span-1">
-    <model-viewer src="assets/blend/hero/OTAKK.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
+  <div class="flex justify-center lg:col-span-1 mt-20">
+    <model-viewer src="assets/blend/hero/otak.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
   </div>
 
 
+  <div class="container mx-auto p-6">
+    <div class="bg-gradient-to-r from-[#18abbc] via-purple-500 to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
+      <h2 class="text-3xl text-white font-bold mb-4">Penjelasan Tentang Otak</h2>
+      <p class="mb-4">
+        Otak adalah organ pusat sistem saraf manusia yang bertanggung jawab atas semua aktivitas tubuh, termasuk pikiran, ingatan, gerakan, dan pengaturan fungsi vital lainnya. Otak terdiri dari berbagai bagian yang masing-masing memiliki fungsi spesifik.
+      </p>
+      <p>
+        Sebagai pusat kendali tubuh, otak memproses informasi yang diterima dari panca indra, mengoordinasikan gerakan, serta memori, dan merupakan tempat pemrosesan emosi serta pengambilan keputusan.
+      </p>
+    </div>
+  
+    <!-- Bagian-Bagian Otak -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Bagian - Bagian <span class="text-[#18abbc]">Otak</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Korteks Serebral</strong>: Lapisan luar otak yang bertanggung jawab atas fungsi tingkat tinggi seperti berpikir, perencanaan, dan pengambilan keputusan.</div>
+        <div><strong>Lobus Frontal</strong>: Bagian depan otak yang mengontrol gerakan sukarela, perencanaan, penalaran, dan aspek kepribadian.</div>
+        <div><strong>Lobus Parietal</strong>: Berperan dalam pemrosesan informasi sensorik seperti sentuhan, suhu, dan rasa sakit.</div>
+        <div><strong>Lobus Temporal</strong>: Terletak di sisi otak, lobus ini berfungsi dalam pengolahan pendengaran, memori, dan pemahaman bahasa.</div>
+        <div><strong>Lobus Oksipital</strong>: Bagian belakang otak yang mengolah informasi visual.</div>
+        <div><strong>Serebelum</strong>: Berperan dalam mengatur keseimbangan, koordinasi, dan keterampilan motorik halus.</div>
+        <div><strong>Batang Otak</strong>: Menghubungkan otak dengan sumsum tulang belakang dan mengatur fungsi dasar seperti pernapasan, detak jantung, dan tekanan darah.</div>
+      </div>
+    </div>
+  
+    <!-- Penyakit-Penyakit Umum Pada Otak -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Penyakit - Penyakit Umum Pada <span class="text-[#18abbc]">Otak</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Stroke</strong>: Terjadi ketika suplai darah ke bagian otak terganggu, menyebabkan kerusakan jaringan otak. Stroke dapat menyebabkan kelemahan, gangguan bicara, dan kehilangan fungsi tubuh.</div>
+        <div><strong>Epilepsi</strong>: Gangguan neurologis yang ditandai dengan kejang berulang, yang disebabkan oleh aktivitas listrik yang abnormal di otak.</div>
+        <div><strong>Penyakit Alzheimer</strong>: Penyakit degeneratif yang mempengaruhi memori dan fungsi kognitif, umumnya terjadi pada usia lanjut.</div>
+        <div><strong>Penyakit Parkinson</strong>: Gangguan yang mempengaruhi gerakan, menyebabkan tremor, kekakuan, dan gangguan keseimbangan.</div>
+        <div><strong>Multiple Sclerosis</strong>: Penyakit autoimun yang menyerang sistem saraf pusat, menyebabkan gejala seperti kelelahan, masalah mobilitas, dan gangguan penglihatan.</div>
+      </div>
+    </div>
+  
+    <!-- Cara Mengatasi Penyakit Otak -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Cara Mengatasi Penyakit <span class="text-[#18abbc]">Otak</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Terapi Rehabilitasi</strong>: Setelah stroke atau cedera otak, terapi fisik, okupasi, dan terapi bicara dapat membantu memulihkan fungsi yang hilang.</div>
+        <div><strong>Pengobatan Medis</strong>: Obat-obatan seperti antiepilepsi, antidepresan, atau penghambat beta dapat digunakan untuk mengendalikan gejala penyakit otak.</div>
+        <div><strong>Prosedur Bedah</strong>: Dalam beberapa kasus, seperti tumor otak, operasi mungkin diperlukan untuk mengangkat atau memperbaiki bagian otak yang terkena.</div>
+        <div><strong>Mengelola Gaya Hidup Sehat</strong>: Olahraga rutin, diet sehat, dan menjaga kesehatan mental dapat membantu mencegah atau mengelola kondisi otak.</div>
+        <div><strong>Stimulasi Otak</strong>: Aktivitas seperti membaca, bermain puzzle, dan belajar hal baru dapat membantu menjaga fungsi kognitif tetap tajam.</div>
+      </div>
+    </div>
+  </div>
+  
+  
 
 
  <!-- Footer -->
