--- a/paruparu.html
+++ b/paruparu.html
@@ -136,17 +136,64 @@
 
 
   <div class="text-center mt-12">
-    <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
-    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
-    <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    <p class="text-3xl font-bold text-accent-secondary mb-4">Anatomi Paru - Paru</p>
+    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Paru - Paru Bentuk 3D</p>
   </div>
 
 
-  <div class="flex justify-center lg:col-span-1">
-    <model-viewer src="assets/blend/hero/realistic_human_lungs.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
+  <div class="flex justify-center lg:col-span-1 mt-20">
+    <model-viewer src="assets/blend/hero/paruparu.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
   </div>
 
 
+  <div class="container mx-auto p-6">
+    <div class="bg-gradient-to-r from-[#18abbc]  via-purple-500  to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
+      <h2 class="text-3xl text-white font-bold mb-4">Penjelasan Tentang Paru - Paru</h2>
+      <p class="mb-4">
+        Paru-paru adalah organ vital dalam sistem pernapasan manusia yang bertanggung jawab untuk menukar oksigen dari udara dengan karbon dioksida dari darah. Proses ini memungkinkan tubuh mendapatkan oksigen yang diperlukan untuk fungsi seluler dan mengeluarkan gas limbah.
+      </p>
+      <p>
+        Paru-paru terdiri dari dua bagian utama, yaitu paru-paru kanan dan paru-paru kiri, yang masing-masing terletak di rongga dada. Paru-paru dilapisi oleh pleura, membran tipis yang membantu mengurangi gesekan saat bernapas.
+      </p>
+    </div>
+  
+    <!-- Bagian-Bagian Paru-Paru -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Bagian - Bagian <span class="text-[#18abbc]">Paru - Paru</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Bronkus</strong>: Saluran utama yang menghubungkan trakea dengan paru-paru, bercabang menjadi bronkiolus yang lebih kecil di dalam paru-paru.</div>
+        <div><strong>Bronkiolus</strong>: Saluran udara kecil yang bercabang dari bronkus, mengarah ke alveoli tempat pertukaran gas terjadi.</div>
+        <div><strong>Alveoli</strong>: Kantung udara mikroskopis di dalam paru-paru di mana oksigen masuk ke dalam darah dan karbon dioksida dikeluarkan.</div>
+        <div><strong>Pleura</strong>: Membran ganda yang melapisi paru-paru dan dinding dada, yang mengurangi gesekan selama pernapasan.</div>
+        <div><strong>Diafragma</strong>: Otot yang berada di bawah paru-paru, berperan penting dalam proses pernapasan dengan membantu mengembangkan dan mengempiskan paru-paru.</div>
+      </div>
+    </div>
+  
+    <!-- Penyakit-Penyakit Umum Pada Paru-Paru -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Penyakit - Penyakit Umum Pada <span class="text-[#18abbc]">Paru - Paru</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Asma</strong>: Penyakit kronis yang menyebabkan penyempitan dan peradangan saluran udara, mengakibatkan kesulitan bernapas, batuk, dan sesak napas.</div>
+        <div><strong>Pneumonia</strong>: Infeksi paru-paru yang menyebabkan peradangan alveoli, sering kali disertai gejala seperti demam, batuk, dan nyeri dada.</div>
+        <div><strong>Bronkitis</strong>: Peradangan pada lapisan bronkus, yang menyebabkan batuk berdahak dan kesulitan bernapas.</div>
+        <div><strong>Emfisema</strong>: Kerusakan alveoli yang mengurangi elastisitas paru-paru, sering kali disebabkan oleh merokok, dan menyebabkan kesulitan bernapas.</div>
+        <div><strong>Kanker Paru-Paru</strong>: Penyakit yang ditandai dengan pertumbuhan sel-sel abnormal di paru-paru, sering kali terkait dengan merokok atau paparan zat berbahaya.</div>
+      </div>
+    </div>
+  
+    <!-- Cara Mengatasi Penyakit Paru-Paru -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Cara Mengatasi Penyakit <span class="text-[#18abbc]">Paru - Paru</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Berhenti Merokok</strong>: Langkah paling penting untuk mencegah dan mengatasi penyakit paru-paru adalah berhenti merokok dan menghindari paparan asap rokok.</div>
+        <div><strong>Terapi Pernapasan</strong>: Latihan pernapasan dan penggunaan inhaler dapat membantu mengelola gejala asma dan penyakit paru-paru obstruktif kronik (PPOK).</div>
+        <div><strong>Pengobatan Medis</strong>: Antibiotik, steroid, atau obat bronkodilator dapat digunakan untuk mengobati infeksi paru-paru atau mengendalikan gejala kronis.</div>
+        <div><strong>Rehabilitasi Paru-Paru</strong>: Program rehabilitasi yang melibatkan latihan fisik dan pendidikan dapat membantu meningkatkan kapasitas paru-paru dan kualitas hidup penderita penyakit paru-paru.</div>
+        <div><strong>Pemeriksaan Rutin</strong>: Melakukan pemeriksaan kesehatan secara berkala, termasuk tes fungsi paru-paru, untuk mendeteksi masalah paru-paru sejak dini dan mencegah komplikasi lebih lanjut.</div>
+      </div>
+    </div>
+  </div>
+  
 
 
  <!-- Footer -->
