--- a/jantung.html
+++ b/jantung.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EduHealth - Eksplorasi Anatomi Tubuh Manusia</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="dist/output.css" />
-    <link rel="stylesheet" href="../css/style.css" />
 
-    <!-- Remix Icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>EduHealth - Eksplorasi Anatomi Tubuh Manusia</title>
+  <!-- CSS -->
+  <link rel="stylesheet" href="dist/output.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+  <!-- Remix Icon -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.min.css" />
 
-    <!-- Swiperjs -->
-    <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
-    <!-- Model Viewer -->
-    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  </head>
+  <!-- Swiperjs -->
+  <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
 
-  <body id="content">
+  <!-- Model Viewer -->
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+</head>
+
+<body id="content">
   <!-- Header -->
   <header class="py-8 lg:pt-6 lg:pb-14">
     <div class="container mx-auto lg:relative flex flex-col lg:flex-row lg:justify-between gap-y-4 lg:gap-y-0">
@@ -44,19 +46,24 @@
           <!-- Toggle Dark Mode -->
           <div class="relative inline-block text-left ml-auto lg:ml-4">
             <div class="flex justify-end pr-4 lg:pr-0">
-              <button
-                id="theme-toggle-button"
-                class="inline-flex items-center justify-center w-10 h-10 rounded-full border border-gray-300 shadow-sm bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
-              >
+              <button id="theme-toggle-button"
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full border border-gray-300 shadow-sm bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 <i class="ri-sun-line text-xl"></i>
               </button>
             </div>
 
-            <div id="theme-menu" class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden">
+            <div id="theme-menu"
+              class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden">
               <div class="py-1" role="none">
-                <a href="#" id="light-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-sun-line mr-2"></i> Light </a>
-                <a href="#" id="dark-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-moon-line mr-2"></i> Dark </a>
-                <a href="#" id="system-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-computer-line mr-2"></i> System </a>
+                <a href="#" id="light-mode"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+                  role="menuitem"> <i class="ri-sun-line mr-2"></i> Light </a>
+                <a href="#" id="dark-mode"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+                  role="menuitem"> <i class="ri-moon-line mr-2"></i> Dark </a>
+                <a href="#" id="system-mode"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
+                  role="menuitem"> <i class="ri-computer-line mr-2"></i> System </a>
               </div>
             </div>
           </div>
@@ -64,8 +71,10 @@
       </div>
 
       <!-- Mobile Navbar -->
-      <nav class="mnav bg-white fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300">
-        <div class="mnav__close-btn bg-primary w-8 h-8 relative -right-full top-8 flex justify-center items-center rounded-tr-lg rounded-br-lg cursor-pointer transition-all">
+      <nav
+        class="mnav bg-white fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300">
+        <div
+          class="mnav__close-btn bg-primary w-8 h-8 relative -right-full top-8 flex justify-center items-center rounded-tr-lg rounded-br-lg cursor-pointer transition-all">
           <i class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white"></i>
         </div>
         <div class="px-12 flex flex-col gap-y-12 h-full">
@@ -86,14 +95,16 @@
               <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
             </li>
             <li>
-              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300" style="margin-left: -25\epx;">Kontak</a>
+              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300"
+                style="margin-left: -25\epx;">Kontak</a>
             </li>
           </ul>
         </div>
       </nav>
 
       <!-- Desktop Navbar -->
-      <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
+      <nav id="navbar"
+        class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
         <div class="flex items-center">
           <div class="logo hidden lg:block mr-8">
             <img src="./assets/img/header/logo.svg" alt="Logo" />
@@ -119,8 +130,10 @@
         <!-- Search -->
         <div class="flex items-center">
           <div class="relative">
-            <input type="text" id="searchInput" placeholder="Cari Kata" class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none pr-8" />
-            <button id="clearSearch" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-secondary hover:text-accent transition-all duration-300 hidden">&times;</button>
+            <input type="text" id="searchInput" placeholder="Cari Kata"
+              class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none pr-8" />
+            <button id="clearSearch"
+              class="absolute right-2 top-1/2 transform -translate-y-1/2 text-secondary hover:text-accent transition-all duration-300 hidden">&times;</button>
           </div>
           <i id="searchIcon" class="ri-search-line text-secondary ml-2 hover:text-accent transition-all duration-300 cursor-pointer"></i>
           <div id="searchNavigation" class="hidden ml-2">
@@ -132,25 +145,69 @@
     </div>
   </header>
   <!-- End Header -->
-   
-
 
   <div class="text-center mt-12">
-    <p class="text-xl font-bold text-accent-secondary mb-4">Visualisasi Realistis</p>
-    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Dengan Kualitas 3D</p>
-    <p class="text-secondary">Detail yang akurat, setiap bagian tubuh ditampilkan dengan jelas untuk memberikan pengalaman belajar yang mendalam.</p>
+    <p class="text-3xl font-bold text-accent-secondary mb-4">Anatomi Jantung</p>
+    <p class="text-xl lg:text-4xl text-black font-bold mb-2">Jelajahi Anatomi Jantung Bentuk 3D</p>
   </div>
 
-
-  <div class="flex justify-center lg:col-span-1">
-    <model-viewer src="assets/blend/hero/hati.glb" alt="3D-Model" auto-rotate camera-controls style="height: 600px; width: 1200px"></model-viewer>
+  <div class="flex justify-center lg:col-span-1 mt-20">
+    <model-viewer src="assets/blend/hero/jantung.glb" alt="3D-Model" auto-rotate camera-controls
+      style="height: 600px; width: 100%; max-width: 1200px;"></model-viewer>
   </div>
 
-
-
-
- <!-- Footer -->
- <footer class="bg-white">
+  <div class="container mx-auto p-6">
+    <div class="bg-gradient-to-r from-[#18abbc]  via-purple-500  to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
+      <h2 class="text-3xl text-white font-bold mb-4">Penjelasan Tentang Jantung</h2>
+      <p class="mb-4">
+        Jantung adalah organ vital yang bertanggung jawab untuk memompa darah ke seluruh tubuh. Terletak di antara paru-paru dan sedikit ke kiri, jantung memiliki peran penting dalam menjaga sirkulasi darah yang membawa oksigen dan nutrisi ke seluruh tubuh serta membuang karbon dioksida dan limbah lainnya.
+      </p>
+      <p>
+        Jantung bekerja secara terus-menerus tanpa henti sepanjang hidup seseorang, dan kesehatan jantung sangat penting untuk kelangsungan hidup.
+      </p>
+    </div>
+  
+    <!-- Bagian-Bagian Jantung -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Bagian - Bagian <span class="text-[#18abbc]">Jantung</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Atrium Kanan</strong>: Menerima darah yang kekurangan oksigen dari tubuh dan mengirimkannya ke ventrikel kanan.</div>
+        <div><strong>Ventrikel Kanan</strong>: Memompa darah ke paru-paru untuk mengambil oksigen.</div>
+        <div><strong>Atrium Kiri</strong>: Menerima darah yang kaya oksigen dari paru-paru dan mengirimkannya ke ventrikel kiri.</div>
+        <div><strong>Ventrikel Kiri</strong>: Memompa darah yang kaya oksigen ke seluruh tubuh.</div>
+        <div><strong>Katup Jantung</strong>: Mengatur aliran darah antara bagian-bagian jantung dan mencegah aliran balik.</div>
+        <div><strong>Septum</strong>: Dinding pemisah antara sisi kanan dan kiri jantung.</div>
+        <div><strong>Aorta</strong>: Arteri terbesar yang membawa darah dari ventrikel kiri ke seluruh tubuh.</div>
+      </div>
+    </div>
+  
+    <!-- Penyakit-Penyakit Umum Pada Jantung -->
+    <div class="bg-white p-6 rounded-lg shadow-md mb-8">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Penyakit - Penyakit Umum Pada <span class="text-[#18abbc]">Jantung</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Penyakit Jantung Koroner</strong>: Penyakit ini terjadi ketika arteri koroner yang memasok darah ke jantung mengalami penyempitan atau tersumbat karena penumpukan plak. Hal ini dapat menyebabkan angina (nyeri dada) atau serangan jantung.</div>
+        <div><strong>Gagal Jantung</strong>: Kondisi di mana jantung tidak dapat memompa darah dengan efektif, menyebabkan penumpukan cairan di paru-paru dan bagian tubuh lainnya.</div>
+        <div><strong>Arrhythmia</strong>: Gangguan pada irama detak jantung, baik terlalu cepat, terlalu lambat, atau tidak teratur.</div>
+        <div><strong>Kardiomiopati</strong>: Penyakit yang menyebabkan otot jantung menjadi lemah atau mengalami perubahan struktur, mengurangi kemampuannya untuk memompa darah.</div>
+        <div><strong>Penyakit Katup Jantung</strong>: Terjadi ketika salah satu atau lebih dari empat katup jantung tidak berfungsi dengan baik, mengganggu aliran darah dalam jantung.</div>
+      </div>
+    </div>
+  
+    <!-- Cara Mengatasi Penyakit Jantung -->
+    <div class="bg-white p-6 rounded-lg shadow-md">
+      <h2 class="text-2xl md:text-3xl font-bold mb-4 text-gray-800">Cara Mengatasi Penyakit <span class="text-[#18abbc]">Jantung</span></h2>
+      <div class="mb-4 space-y-4 text-gray-700">
+        <div><strong>Mengadopsi Gaya Hidup Sehat</strong>: Mengurangi konsumsi makanan tinggi lemak dan garam, menjaga berat badan ideal, rutin berolahraga, dan berhenti merokok.</div>
+        <div><strong>Pengobatan Medis</strong>: Penggunaan obat-obatan seperti aspirin, statin, beta-blocker, dan ACE inhibitor yang diresepkan oleh dokter untuk mengontrol tekanan darah, kolesterol, dan mencegah pembekuan darah.</div>
+        <div><strong>Prosedur Medis</strong>: Dalam beberapa kasus, prosedur seperti angioplasti (pembukaan pembuluh darah yang tersumbat), pemasangan stent, atau operasi bypass jantung diperlukan untuk mengembalikan aliran darah ke jantung.</div>
+        <div><strong>Pemantauan dan Rehabilitasi</strong>: Pemantauan rutin oleh dokter, terapi rehabilitasi jantung, dan modifikasi gaya hidup berkelanjutan sangat penting untuk pemulihan dan pencegahan lebih lanjut.</div>
+        <div><strong>Perangkat Medis</strong>: Pemasangan alat pacu jantung atau defibrillator implan dapat membantu mengatur detak jantung dan mencegah kematian mendadak akibat aritmia.</div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Footer -->
+  <footer class="bg-white">
     <div class="container mx-auto mt-4 px-6 py-8">
       <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
         <!-- Logo dan Deskripsi -->
@@ -158,12 +215,15 @@
           <a href="index.html">
             <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
           </a>
-          <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
+          <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024
+            diselenggarakan oleh Informatika UNSIL.</p>
           <div class="flex space-x-6 mb-6">
-            <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+            <a href="https://github.com/" target="_blank"
+              class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
               <i class="ri-whatsapp-line text-2xl lg:text-4xl"></i>
             </a>
-            <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+            <a href="https://github.com/jenioden1/iconiccc" target="_blank"
+              class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
               <i class="ri-github-fill text-2xl lg:text-4xl"></i>
             </a>
           </div>
@@ -181,7 +241,6 @@
           </nav>
         </div>
 
-        <!-- Kategori -->
         <!-- Kategori -->
         <div class="lg:w-1/3 md:w-1/2 w-full">
           <h2 class="text-lg font-bold mb-6">Kategori</h2>
@@ -210,7 +269,8 @@
           <nav class="list-none space-y-4">
             <li><i class="ri-mail-line text-accent text-xl"></i> eduhealth@gmail.com</li>
             <li><i class="ri-phone-line text-accent text-xl"></i> 0853 2345 6789</li>
-            <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa Barat 46196</li>
+            <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa
+              Barat 46196</li>
           </nav>
         </div>
       </div>
