--- a/definisi.html
+++ b/definisi.html
@@ -271,8 +271,10 @@
 
         <!-- Deskripsi -->
         <div class="md:col-span-3 bg-gray-100 p-6 shadow-lg rounded-lg flex items-start">
-          <img src="" alt="" id="gambar-penunjang" class="rounded-[20px] w-[300px] h-[300px] object-cover mr-6 hidden border-2 border-gray-300" />
-          <p id="deskripsi-penjelasan" class="text-gray-500">Pilih sistem organ dan nama organ untuk melihat penjelasan.</p>
+          <div class="flex flex-col md:flex-row md:items-start">
+            <img src="" alt="" id="gambar-penunjang" class="rounded-[20px] w-full md:w-[300px] h-auto md:h-[300px] object-cover mb-4 md:mb-0 md:mr-6 hidden border-2 border-gray-300" />
+            <p id="deskripsi-penjelasan" class="text-gray-500">Pilih sistem organ dan nama organ untuk melihat penjelasan.</p>
+          </div>
         </div>
       </div>
     </section>
