--- a/definisi.html
+++ b/definisi.html
@@ -323,27 +323,28 @@
             </nav>
           </div>
 
-          <!-- Kategori -->
-          <div class="lg:w-1/3 md:w-1/2 w-full">
-            <h2 class="text-lg font-bold mb-6">Kategori</h2>
-            <div class="grid grid-cols-2 gap-4">
-              <nav class="list-none space-y-6">
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Pernapasan</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Pencernaan</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Ekskresi</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Reproduksi</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Saraf</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Endokrin</a></li>
-              </nav>
-              <nav class="list-none space-y-6">
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Limfatik</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Integumen</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Imun</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Muskuloskeletal</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Peredaran Darah</a></li>
-              </nav>
-            </div>
-          </div>
+       <!-- Kategori -->
+<div class="lg:w-1/3 md:w-1/2 w-full">
+  <h2 class="text-lg font-bold mb-6">Kategori</h2>
+  <div class="grid grid-cols-2 gap-4">
+    <nav class="list-none space-y-6">
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-pernapasan">Sistem Pernapasan</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-pencernaan">Sistem Pencernaan</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-ekskresi">Sistem Ekskresi</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-reproduksi">Sistem Reproduksi</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-saraf">Sistem Saraf</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-endokrin">Sistem Endokrin</a></li>
+    </nav>
+    <nav class="list-none space-y-6">
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-limfatik">Sistem Limfatik</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-integumen">Sistem Integumen</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-imun">Sistem Imun</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-muskuloskeletal">Sistem Muskuloskeletal</a></li>
+      <li><a href="definisi.html" class="hover:text-accent" data-value="sistem-peredaran-darah">Sistem Peredaran Darah</a></li>
+    </nav>
+  </div>
+</div>
+
 
           <!-- Hubungi Kami -->
           <div class="lg:w-1/4 md:w-1/2 w-full">
