--- a/ginjal.html
+++ b/ginjal.html
@@ -30,7 +30,7 @@
       <!-- Logo -->
       <div class="flex justify-center lg:justify-normal">
         <a href="index.html">
-          <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+          <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px;" />
         </a>
       </div>
 
@@ -70,7 +70,7 @@
         </div>
         <div class="px-12 flex flex-col gap-y-12 h-full">
           <a href="#">
-            <img src="./assets/img/header/logo.svg" alt="" />
+            <img src="./assets/img/header/logo.svg" alt="" style="width: 100px; height: 80px; margin-left: 40px;" />
           </a>
           <ul class="flex flex-col gap-y-5">
             <li>
@@ -86,7 +86,7 @@
               <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
             </li>
             <li>
-              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300" style="margin-left: -25\epx;">Kontak</a>
+              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300" style="margin-left: -25px;">Kontak</a>
             </li>
           </ul>
         </div>
@@ -96,7 +96,7 @@
       <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
         <div class="flex items-center">
           <div class="logo hidden lg:block mr-8">
-            <img src="./assets/img/header/logo.svg" alt="Logo" />
+            <img src="./assets/img/header/logo.svg" alt="Logo" style="width: 100px; height: 80px;" />
           </div>
           <ul class="flex">
             <li>
@@ -198,14 +198,14 @@
 
 
 
- <!-- Footer -->
- <footer class="bg-white">
+  <!-- Footer -->
+  <footer class="bg-white">
     <div class="container mx-auto mt-4 px-6 py-8">
       <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
         <!-- Logo dan Deskripsi -->
         <div class="lg:w-1/5 md:w-1/2">
           <a href="index.html">
-            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px; height: 80px;" />
           </a>
           <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
           <div class="flex space-x-6 mb-6">
@@ -276,5 +276,4 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
 </body>
-
 </html>
