--- a/jantung.html
+++ b/jantung.html
@@ -32,7 +32,7 @@
       <!-- Logo -->
       <div class="flex justify-center lg:justify-normal">
         <a href="index.html">
-          <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+          <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px;" />
         </a>
       </div>
 
@@ -46,24 +46,19 @@
           <!-- Toggle Dark Mode -->
           <div class="relative inline-block text-left ml-auto lg:ml-4">
             <div class="flex justify-end pr-4 lg:pr-0">
-              <button id="theme-toggle-button"
-                class="inline-flex items-center justify-center w-10 h-10 rounded-full border border-gray-300 shadow-sm bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+              <button
+                id="theme-toggle-button"
+                class="inline-flex items-center justify-center w-10 h-10 rounded-full border border-gray-300 shadow-sm bg-white text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              >
                 <i class="ri-sun-line text-xl"></i>
               </button>
             </div>
 
-            <div id="theme-menu"
-              class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden">
+            <div id="theme-menu" class="origin-top-right absolute right-0 mt-2 w-40 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden">
               <div class="py-1" role="none">
-                <a href="#" id="light-mode"
-                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-                  role="menuitem"> <i class="ri-sun-line mr-2"></i> Light </a>
-                <a href="#" id="dark-mode"
-                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-                  role="menuitem"> <i class="ri-moon-line mr-2"></i> Dark </a>
-                <a href="#" id="system-mode"
-                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900"
-                  role="menuitem"> <i class="ri-computer-line mr-2"></i> System </a>
+                <a href="#" id="light-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-sun-line mr-2"></i> Light </a>
+                <a href="#" id="dark-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-moon-line mr-2"></i> Dark </a>
+                <a href="#" id="system-mode" class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem"> <i class="ri-computer-line mr-2"></i> System </a>
               </div>
             </div>
           </div>
@@ -71,15 +66,13 @@
       </div>
 
       <!-- Mobile Navbar -->
-      <nav
-        class="mnav bg-white fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300">
-        <div
-          class="mnav__close-btn bg-primary w-8 h-8 relative -right-full top-8 flex justify-center items-center rounded-tr-lg rounded-br-lg cursor-pointer transition-all">
+      <nav class="mnav bg-white fixed w-[300px] top-0 h-screen -left-[300px] shadow-2xl lg:hidden transition-all duration-300">
+        <div class="mnav__close-btn bg-primary w-8 h-8 relative -right-full top-8 flex justify-center items-center rounded-tr-lg rounded-br-lg cursor-pointer transition-all">
           <i class="mnav__close-btn-icon ri-arrow-right-s-line text-2xl text-white"></i>
         </div>
         <div class="px-12 flex flex-col gap-y-12 h-full">
           <a href="#">
-            <img src="./assets/img/header/logo.svg" alt="" />
+            <img src="./assets/img/header/logo.svg" alt="" style="width: 100px; height: 80px; margin-left: 40px;" />
           </a>
           <ul class="flex flex-col gap-y-5">
             <li>
@@ -95,19 +88,17 @@
               <a href="tentang.html" class="text-secondary hover:text-accent transition-all duration-300">Tentang</a>
             </li>
             <li>
-              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300"
-                style="margin-left: -25\epx;">Kontak</a>
+              <a href="kontak.html" class="text-secondary hover:text-accent transition-all duration-300" style="margin-left: -25px;">Kontak</a>
             </li>
           </ul>
         </div>
       </nav>
 
       <!-- Desktop Navbar -->
-      <nav id="navbar"
-        class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
+      <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
         <div class="flex items-center">
           <div class="logo hidden lg:block mr-8">
-            <img src="./assets/img/header/logo.svg" alt="Logo" />
+            <img src="./assets/img/header/logo.svg" alt="Logo" style="width: 100px; height: 80px;" />
           </div>
           <ul class="flex">
             <li>
@@ -130,10 +121,8 @@
         <!-- Search -->
         <div class="flex items-center">
           <div class="relative">
-            <input type="text" id="searchInput" placeholder="Cari Kata"
-              class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none pr-8" />
-            <button id="clearSearch"
-              class="absolute right-2 top-1/2 transform -translate-y-1/2 text-secondary hover:text-accent transition-all duration-300 hidden">&times;</button>
+            <input type="text" id="searchInput" placeholder="Cari Kata" class="bg-grey text-secondary placeholder-secondary rounded-[5px] px-2 py-1 focus:outline-none pr-8" />
+            <button id="clearSearch" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-secondary hover:text-accent transition-all duration-300 hidden">&times;</button>
           </div>
           <i id="searchIcon" class="ri-search-line text-secondary ml-2 hover:text-accent transition-all duration-300 cursor-pointer"></i>
           <div id="searchNavigation" class="hidden ml-2">
@@ -213,17 +202,14 @@
         <!-- Logo dan Deskripsi -->
         <div class="lg:w-1/5 md:w-1/2">
           <a href="index.html">
-            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px; height: 80px;" />
           </a>
-          <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024
-            diselenggarakan oleh Informatika UNSIL.</p>
+          <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
           <div class="flex space-x-6 mb-6">
-            <a href="https://github.com/" target="_blank"
-              class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+            <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
               <i class="ri-whatsapp-line text-2xl lg:text-4xl"></i>
             </a>
-            <a href="https://github.com/jenioden1/iconiccc" target="_blank"
-              class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+            <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
               <i class="ri-github-fill text-2xl lg:text-4xl"></i>
             </a>
           </div>
@@ -241,6 +227,7 @@
           </nav>
         </div>
 
+        <!-- Kategori -->
         <!-- Kategori -->
         <div class="lg:w-1/3 md:w-1/2 w-full">
           <h2 class="text-lg font-bold mb-6">Kategori</h2>
@@ -269,8 +256,7 @@
           <nav class="list-none space-y-4">
             <li><i class="ri-mail-line text-accent text-xl"></i> eduhealth@gmail.com</li>
             <li><i class="ri-phone-line text-accent text-xl"></i> 0853 2345 6789</li>
-            <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa
-              Barat 46196</li>
+            <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa Barat 46196</li>
           </nav>
         </div>
       </div>
@@ -287,5 +273,4 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
 </body>
-
 </html>
