--- a/kontak.html
+++ b/kontak.html
@@ -28,7 +28,7 @@
         <!-- Logo -->
         <div class="flex justify-center lg:justify-normal">
           <a href="index.html">
-            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+            <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px;" />
           </a>
         </div>
 
@@ -68,7 +68,7 @@
           </div>
           <div class="px-12 flex flex-col gap-y-12 h-full">
             <a href="#">
-              <img src="./assets/img/header/logo.svg" alt="" />
+              <img src="./assets/img/header/logo.svg" alt="" style="width: 100px; height: 80px; margin-left: 40px;" />
             </a>
             <ul class="flex flex-col gap-y-5">
               <li>
@@ -94,7 +94,7 @@
         <nav id="navbar" class="hidden navbar-default bg-white w-full left-0 right-0 shadow-custom1 h-16 rounded-[10px] lg:flex lg:items-center lg:justify-between lg:px-[50px]">
           <div class="flex items-center">
             <div class="logo hidden lg:block mr-8">
-              <img src="./assets/img/header/logo.svg" alt="Logo" />
+              <img src="./assets/img/header/logo.svg" alt="Logo" style="width: 100px; height: 80px;" />
             </div>
             <ul class="flex">
               <li>
@@ -132,7 +132,7 @@
     <!-- End Header -->
 
     <!-- Hero -->
-    <section class="relative flex mt-8 items-center justify-center h-40 lg:h-[400px] bg-cover bg-hero">
+    <section class="relative flex mt-2 items-center justify-center h-40 lg:h-[400px] bg-cover bg-hero">
       <!-- Overlay Shadow -->
       <div class="absolute inset-0 bg-black opacity-80"></div>
       <div class="relative text-center text-white">
@@ -177,80 +177,83 @@
     </section>
     <!-- End Kontak -->
 
-    <!-- Footer -->
-    <footer class="bg-white">
-      <div class="container mx-auto mt-4 px-6 py-8">
-        <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
-          <!-- Logo dan Deskripsi -->
-          <div class="lg:w-1/5 md:w-1/2">
-            <a href="index.html">
-              <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
-            </a>
-            <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
-            <div class="flex space-x-6 mb-6">
-              <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
-                <i class="ri-whatsapp-line text-2xl lg:text-4xl"></i>
+      <!-- Footer -->
+      <footer class="bg-white">
+        <div class="container mx-auto mt-4 px-6 py-8">
+          <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
+            <!-- Logo dan Deskripsi -->
+            <div class="lg:w-1/5 md:w-1/2">
+              <a href="index.html">
+                <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" style="width: 100px; height: 80px;" />
               </a>
-              <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
-                <i class="ri-github-fill text-2xl lg:text-4xl"></i>
-              </a>
+              <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
+              <div class="flex space-x-6 mb-6">
+                <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+                  <i class="ri-whatsapp-line text-2xl lg:text-4xl"></i>
+                </a>
+                <a href="https://github.com/jenioden1/iconiccc" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
+                  <i class="ri-github-fill text-2xl lg:text-4xl"></i>
+                </a>
+              </div>
             </div>
-          </div>
-
-          <!-- Menu Eduhealth -->
-          <div class="lg:w-1/5 md:w-1/2 w-full">
-            <h2 class="text-lg font-bold mb-6">Menu Eduhealth</h2>
-            <nav class="list-none space-y-6">
-              <li><a href="index.html" class="hover:text-accent">Beranda</a></li>
-              <li><a href="definisi.html" class="hover:text-accent">Definisi</a></li>
-              <li><a href="eksplor.html" class="hover:text-accent">Eksplor</a></li>
-              <li><a href="tentang.html" class="hover:text-accent">Tentang</a></li>
-              <li><a href="kontak.html" class="hover:text-accent">Kontak</a></li>
-            </nav>
-          </div>
-
-          <!-- Kategori -->
-          <!-- Kategori -->
-          <div class="lg:w-1/3 md:w-1/2 w-full">
-            <h2 class="text-lg font-bold mb-6">Kategori</h2>
-            <div class="grid grid-cols-2 gap-4">
+  
+            <!-- Menu Eduhealth -->
+            <div class="lg:w-1/5 md:w-1/2 w-full">
+              <h2 class="text-lg font-bold mb-6">Menu Eduhealth</h2>
               <nav class="list-none space-y-6">
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Pernapasan</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Pencernaan</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Ekskresi</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Reproduksi</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Saraf</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Endokrin</a></li>
-              </nav>
-              <nav class="list-none space-y-6">
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Limfatik</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Integumen</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Imun</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Muskuloskeletal</a></li>
-                <li><a href="definisi.html" class="hover:text-accent">Sistem Peredaran Darah</a></li>
+                <li><a href="index.html" class="hover:text-accent">Beranda</a></li>
+                <li><a href="definisi.html" class="hover:text-accent">Definisi</a></li>
+                <li><a href="eksplor.html" class="hover:text-accent">Eksplor</a></li>
+                <li><a href="tentang.html" class="hover:text-accent">Tentang</a></li>
+                <li><a href="kontak.html" class="hover:text-accent">Kontak</a></li>
               </nav>
             </div>
+  
+            <!-- Kategori -->
+            <!-- Kategori -->
+            <div class="lg:w-1/3 md:w-1/2 w-full">
+              <h2 class="text-lg font-bold mb-6">Kategori</h2>
+              <div class="grid grid-cols-2 gap-4">
+                <nav class="list-none space-y-6">
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Pernapasan</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Pencernaan</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Ekskresi</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Reproduksi</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Saraf</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Endokrin</a></li>
+                </nav>
+                <nav class="list-none space-y-6">
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Limfatik</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Integumen</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Imun</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Muskuloskeletal</a></li>
+                  <li><a href="definisi.html" class="hover:text-accent">Sistem Peredaran Darah</a></li>
+                </nav>
+              </div>
+            </div>
+  
+            <!-- Hubungi Kami -->
+            <div class="lg:w-1/4 md:w-1/2 w-full">
+              <h2 class="text-lg font-bold mb-6">Hubungi Kami</h2>
+              <nav class="list-none space-y-4">
+                <li><i class="ri-mail-line text-accent text-xl"></i> eduhealth@gmail.com</li>
+                <li><i class="ri-phone-line text-accent text-xl"></i> 0853 2345 6789</li>
+                <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa Barat 46196</li>
+              </nav>
+            </div>
           </div>
-
-          <!-- Hubungi Kami -->
-          <div class="lg:w-1/4 md:w-1/2 w-full">
-            <h2 class="text-lg font-bold mb-6">Hubungi Kami</h2>
-            <nav class="list-none space-y-4">
-              <li><i class="ri-mail-line text-accent text-xl"></i> eduhealth@gmail.com</li>
-              <li><i class="ri-phone-line text-accent text-xl"></i> 0853 2345 6789</li>
-              <li><i class="ri-map-pin-line text-accent text-xl"></i> Mugarsari, Kec. Tamansari, Kota Tasikmalaya, Jawa Barat 46196</li>
-            </nav>
-          </div>
+  
+          <!-- Copyright -->
+          <p class="mt-12 lg:text-center">&copy;2024 EduHealth, Inc. All rights reserved.</p>
         </div>
-
-        <!-- Copyright -->
-        <p class="mt-12 lg:text-center">&copy;2024 EduHealth, Inc. All rights reserved.</p>
-      </div>
-    </footer>
-    <!-- End Footer -->
-
-    <script src="js/main.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/scrollreveal.min.js"></script>
-  </body>
-</html>
+      </footer>
+      <!-- End Footer -->
+  
+      <script src="js/main.js"></script>
+      <script src="js/swiper-bundle.min.js"></script>
+      <script src="js/scrollreveal.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+    </body>
+  </html>
+  
