--- a/ginjal.html
+++ b/ginjal.html
@@ -149,7 +149,7 @@
 
   <div class="container mx-auto p-6">
     <div class="bg-gradient-to-r from-[#18abbc]  via-purple-500  to-pink-500 text-white p-8 rounded-lg shadow-lg mb-8">
-      <h2 class="text-3xl font-bold mb-4">Penjelasan Tentang <span class="text-accent-secondary">Ginjal</span></h2>
+      <h2 class="text-3xl text-white font-bold mb-4">Penjelasan Tentang Ginjal</h2>
       <p class="mb-4">
         Ginjal adalah organ vital dalam tubuh manusia yang berfungsi sebagai penyaring darah, membuang limbah dan kelebihan cairan melalui urine. Ginjal juga berperan dalam menjaga keseimbangan elektrolit dan tekanan darah, serta memproduksi hormon yang penting untuk fungsi tubuh lainnya.
       </p>
