--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <!-- Toggle Dark Mode -->
-            <div class="relative inline-block text-left ml-auto lg:ml-4">
+            <div class="tema relative inline-block text-left ml-auto lg:ml-4">
               <div class="flex justify-end pr-4 lg:pr-0">
                 <button
                   id="theme-toggle-button"
